Fix styling issue with overlapping bottom navbar

--- a/assets/themes/twitter3/css/style.css
+++ b/assets/themes/twitter3/css/style.css
@@ -1,3 +1,7 @@
+body {
+    padding-bottom: 70px;
+}
+
 /* posts index */
 .post > h3.title {
   position: relative;
